# bootprint_x2

./: README.md
src/sample/: README.md
src/sample/dragonboard410c/XppClientMini/: XppClientMini.pro  libprotobuf.so.17  scene.cpp  xppclientmini.out
src/sample/dragonboard410c/ap_base/: 410c_bif_depoly.sh  install.sh  single_pix_stream.sh  start.sh  test.ts
src/sample/dragonboard410c/ap_base/hobot/bif_base/: bifbase.ko
src/sample/dragonboard410c/ap_base/hobot/bif_ethernet/: bifeth.ko
src/sample/dragonboard410c/ap_base/hobot/bif_lite/: biflite_core.ko  biflite_spi.ko
src/sample/dragonboard410c/ap_base/hobot/bif_spi/: bifspi.ko
src/sample/dragonboard410c/ap_base/hobot/sensor/: ar023x.ko
src/sample/dragonboard410c/ap_base/include/: hbipc_ap.h
src/sample/dragonboard410c/ipc_client/: .arclint  README.md
src/sample/dragonboard410c/ipc_client/XppClientMini/: libglfw.so.3  main.cpp  makefile  scene.h  start.sh
src/sample/dragonboard410c/ipc_client/XppClientMini/pb/: x2.pb.cc  x2.pb.h  x2.proto
src/sample/dragonboard410c/ipc_client/plugin/96boardstream/: 96board.pro  autocfg.bat
src/sample/dragonboard410c/ipc_client/plugin/96boardstream/src/: Makefile.bk  common.cpp  common.h  makefile  pack.pb.cc  pack.pb.h  read_frame.c  read_frame.h  recv_device.cpp  recv_device.h
src/sample/dragonboard410c/ipc_client/plugin/96boardstream/test/: main.cpp  pbprocess.cpp  pbprocess.h  stl_inc.h  test.pro  testdevice.cpp  testdevice.h  x2.pb.cc  x2.pb.h
src/sample/dragonboard410c/ipc_client/plugin/filestream/: makefile
src/sample/dragonboard410c/ipc_client/plugin/filestream/data/: smart.7z
src/sample/dragonboard410c/ipc_client/plugin/filestream/src/: makefile  reader.cpp  reader.h
src/sample/dragonboard410c/ipc_client/plugin/filestream/test/: main.cpp  makefile
src/sample/dragonboard410c/ipc_client/plugin/include/: interface.hpp  interfacedevicectrl.hpp  interfacescriptinterpreter.h  scriptdefine.h
src/sample/dragonboard410c/ipc_client/plugin/smartVideo/: CMakeLists.txt  interface.hpp  interfacedevicestream.hpp  libnng.so.1  read_frame.c  read_frame.h  smart_video.cpp  smart_video.h
src/sample/dragonboard410c/ipc_client/plugin/smartVideo/include/xpluginflow/hbpkg/: hbpkg.h  hobot_utililty.h
src/sample/dragonboard410c/ipc_client/plugin/smartVideo/include/xpluginflow/manager/: msg_manager.h
src/sample/dragonboard410c/ipc_client/plugin/smartVideo/include/xpluginflow/message/pluginflow/: msg_registry.h
src/sample/dragonboard410c/ipc_client/plugin/smartVideo/include/xpluginflow/proxy/: hbipc_common.h  ipc_onboard.h  proxy.h  proxy_types.h
src/sample/x2/: xppcp_smart
src/sample/x2/xpp_cp/fasterrcnnmethod/: CMakeLists.txt
src/sample/x2/xpp_cp/smartplugin/: CMakeLists.txt  README.md
src/sample/x2/xpp_cp/smartplugin/deploy/xppcp_smart/: xppcp_smart
src/sample/x2/xpp_cp/smartplugin/deploy/xppcp_smart/configs/: det_mot.json
src/sample/x2/xpp_cp/smartplugin/sample/: smart_main.cpp
src/sample/x2/xpp_cp/smartplugin/src/smartplugin/: smartplugin.cpp
src/sample/x2/xpp_cp/smartplugin/src/smartplugin/xroc/: method_factory.cpp
src/sample/x2/xppcp_smart/: xpp_start.sh  xppcp_smart
src/sample/x2/xppcp_smart/configs/: .det_mot.json.swp  .multitask_config.json.swp  det_mot.json
src/sample/x2/xroc/: CMakeLists.txt  README.md  build.gradle  build.properties  build.properties.local  build.properties.local.x86  dep.tmp  include
src/sample/x2/xroc/cmake/: hobot_util.cmake
src/sample/x2/xroc/example_bbox_filter/: CMakeLists.txt
src/sample/x2/xroc/lib/linux_centos_gcc-4.8.5/configparser/include/configparser/: config_parser.h
src/sample/x2/xroc/lib/linux_centos_gcc-4.8.5/opencv/: README.txt
src/sample/x2/xroc/lib/linux_centos_gcc-4.8.5/opencv/lib/pkgconfig/: opencv.pc
src/sample/x2/xroc/lib/linux_centos_gcc-4.8.5/vision_type/include/horizon/vision_type/: vision_type_util.h
